cabal-version: 2.2

author: Mitchell Rosen
bug-reports: https://github.com/mitchellwrosen/cretheus/issues
category: Json
copyright: Copyright (C) 2023 Mitchell Rosen
description: A clean aeson wrapper.
homepage: https://github.com/mitchellwrosen/cretheus
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: cretheus
stability: experimental
synopsis: A clean aeson wrapper
tested-with: GHC == 9.2.7, GHC == 9.4.5, GHC == 9.6.2
version: 0.1.0

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/mitchellwrosen/cretheus.git

library
  build-depends:
    aeson ^>= 2.1.2 || ^>= 2.2.0,
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19,
    bytestring ^>= 0.11.4 || ^>= 0.12.0,
    reflection ^>= 2.1.7,
    text ^>= 2.0.2 || ^>= 2.1,
    vector ^>= 0.13.0,
  default-extensions:
    BlockArguments
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
  default-language: GHC2021
  exposed-modules:
    Cretheus.Codec
    Cretheus.Decode
    Cretheus.Encode
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  hs-source-dirs: src
  other-modules:
    Cretheus.Internal.Decode
    Cretheus.Internal.Encode
