cabal-version: 2.2

author: Mitchell Dalvi Rosen, Travis Staton
bug-reports: https://github.com/awkward-squad/cretheus/issues
category: Json
copyright: Copyright (C) 2023-2025 Mitchell Dalvi Rosen, Travis Staton
description: A clean `aeson` wrapper.
homepage: https://github.com/awkward-squad/cretheus
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Dalvi Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: cretheus
stability: experimental
synopsis: A clean aeson wrapper
tested-with: GHC == 9.8.4, GHC == 9.10.1, GHC == 9.12.2
version: 1.0.0

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/awkward-squad/cretheus.git

library
  build-depends:
    aeson ^>= 2.1.2 || ^>= 2.2.0,
    base ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 4.20 || ^>= 4.21,
    bytestring ^>= 0.11.4 || ^>= 0.12.0,
    containers ^>= 0.6 || ^>= 0.7 || ^>= 0.8,
    primitive ^>= 0.8 || ^>= 0.9,
    reflection ^>= 2.1.7,
    text ^>= 2.0.2 || ^>= 2.1,
    time ^>= 1.12 || ^>= 1.14 || ^>= 1.15,
    vector ^>= 0.13.0,
  default-extensions:
    BlockArguments
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
  default-language: GHC2021
  exposed-modules:
    Cretheus.Codec
    Cretheus.Decode
    Cretheus.Encode
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations
  hs-source-dirs: src
  other-modules:
    Cretheus.Internal.Decode
    Cretheus.Internal.Encode
